# backtesting-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  .importlinter  EXTRACTION-PLAN.md  README.md  docker-compose.bt.yml  docker-compose.yml  pyproject.toml  run_backtest.py
.github/workflows/: ci.yml
api/: __init__.py
config/: bias_topics.yaml  cost.yaml  domains.yaml  gates.default.yaml  nasdaq100.yaml  provider_capabilities.yaml  seed_event_types.yaml
data/golden/: README.md
deploy/: DEPLOYMENT.md  Dockerfile.api  Dockerfile.backend  Dockerfile.frontend  cloudflare-pages.md  deploy.sh  docker-compose.yml  nginx.bt.conf  nginx.conf
docs/: TESTING-CONCEPT.md
docs/design/: CALIBRATION-V3-RESULTS-ANALYSIS.md  COVERAGE-CALIBRATION-V3-PROTOCOL.md  COVERAGE-CALIBRATION.md  COVERAGE-GATE-SAFETY-MECHANISMS.md  COVERAGE-MEMORY-V1.md  COVERAGE-MEMORY-V2-PLAN.md  COVERAGE-MEMORY-V2.md  COVERAGE-V2-RECONCILED-PLAN.md  COVERAGE-V2-SESSION-HANDOFF.md  calibration-v2-results.json  calibration-v3-effective-counts.json  calibration-v3-frame-snapshot.json  calibration-v3-kseed.json  calibration-v3-panel-altseeds.json  calibration-v3-panel-summary.md  calibration-v3-panel.json  calibration-v3-results-superseded-preAM9.json  calibration-v3-results.json  coverage-v2-gate-config.json  coverage-v2-power-curve.json
docs/reviews/: HARNESS-REVIEW-2026-07-17.json  PANEL-DRAW-REVIEW-2026-07-17.json  PHASE1-REVIEW-2026-07-05.md  PHASE2-3-REVIEW-2026-07-06.md  QUANT-REVIEW-2026-07-03.md  REMEDIATION-PLAN.md  REMEDIATION-TRACKER.md  TRACK1-REVIEW-2026-07-17.json  TRACK2-REVIEW-2026-07-17.json  TRACK4-REVIEW-2026-07-18.json  TRACK5-REVIEW-2026-07-18.json  TRACK6-REVIEW-2026-07-21.json  TRACK7-REVIEW-2026-07-18.json
docs/specs/: REGIME-VALIDATION-CONFIDENCE-SPEC.md
docs/testing/: E2E-TEST-PLAN.md  S9-QUANT-ANALYSIS.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: auth-guard.tsx  info-icon.tsx  leakage-legend.tsx  nav-bar.tsx  onboarding-modal.tsx
frontend/src/lib/: api.ts  auth-context.tsx
scripts/: _warehouse.py  calibrate_coverage_grid.py  calibrate_coverage_grid_v3.py  derive_family_effective_counts.py  draw_calibration_panel.py  preflight_power_curve.py  validate_grid_noise.py
src/backend/: bootstrap.py
src/backend/ai/: ai_service.py  db_models.py  interface.py  keycrypto.py  leakage.py  models.py  registry.py
src/backend/api/: dependencies.py  main.py
src/backend/auth/: account_service.py  db_models.py  dependencies.py  schemas.py  security.py  service.py
src/backend/backtesting/: __init__.py  __main__.py  cli.py  db_models.py  determinism.py  event_gate.py  quality_check.py
src/backend/data_providers/: __init__.py  key_resolver.py
src/backend/db/: base.py  engine.py  init_db.py  models.py
src/backend/indicators/: ema.py  macd.py  (+4 more)
src/backtesting_agent/: __init__.py  __main__.py  cli.py  db_models.py  determinism.py  event_gate.py  quality_check.py
tests/: conftest.py
tests/e2e/: .gitignore  data-provider-keys.spec.js  package-lock.json  package.json  playwright.config.ts  sim-history.spec.js
tests/golden/: backtest_hashes.json
tests/support/: __init__.py  factories.py  frozen_data.py  mock_provider.py  test_harness_smoke.py
(+306 files in other folders)
