[project]
name = "backtesting-agent"
version = "1.0.0"
description = "Autonomous strategy-research agent (backtesting engine + AI research loop)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "aiosqlite",
    "httpx",
    "ib_async",
    "yfinance",
    "apscheduler>=3.10,<4",
    "alpha-vantage",
    "openai>=1.0",
    "anthropic",  # account-settings Phase 2: Claude provider (Messages API adapter)
    "python-jose[cryptography]",
    "cryptography",  # account-settings: Fernet encryption-at-rest for AI keys
    "bcrypt",
    "python-multipart",
    "numpy",
    "pandas",
    "optuna",
    "plotly",
    "backtesting",
    "alpaca-py",           # marketdata fallback provider (lazy-imported)
    "PyYAML>=6.0",
    # Backtesting factor/quality math (Ridge exposures, DSR/quality stats)
    "scikit-learn>=1.3",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "import-linter",  # Modularisation: enforces module-boundary contracts (.importlinter)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "perf: performance budget tests (Sprint I) — run with `pytest -m perf`",
    "determinism: backtest determinism checks (ATS-2004) — requires golden snapshot, run with `pytest -m determinism`",
    "slow: slow integration tests (e.g. ATS-2030 full pipeline) — run with `pytest -m slow`",
]

[tool.ruff]
target-version = "py311"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tests*"]
